# ZCVIOS-alpha

./: .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml  dependency-review.yml  desktop-ci.yml  desktop-package-ci.yml  lockfile-generation.yml
backups/docs-positioning-pass/: README.md.before-docs-positioning  (+1 more)
desktop/: README.md  index.html  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  persistence.rs
docs/: ARCHITECTURE_PRINCIPLES.md  CI_POLICY.md  CROSS_PLATFORM_DESKTOP_REQUIREMENTS.md  DESKTOP_DATA_OWNERSHIP.md  DESKTOP_FEATURE_PARITY_MATRIX.md  DESKTOP_INSTALLER_PLAN.md  DESKTOP_MIGRATION_PLAN.md  LOCAL_AI_RUNTIME.md  MASTER_BUILD_PLAN.md  PRODUCT_THESIS.md  PROGRESS_LEDGER.md  PROJECT_STATUS.md  ROADMAP.md  STATE_OF_SYSTEM_AUDIT_2026-07-01.md  SYSTEM_OVERVIEW.md  TOOLCHAIN_POLICY.md  V1_2_0_EXECUTION_PLAN.md  V1_2_0_WORK_QUEUE.md  ZCCODE_LANGUAGE.md  ZCVIOS_LORE.md
scripts/: run-pytest.mjs  run-seed.mjs  test-linux-package-persistence.sh  verify-application-services.mjs  verify-application-services.ts  verify-ci-policy.mjs  verify-core-engine.ts  verify-desktop-persistence.mjs  verify-desktop-shell.mjs  verify-identity-boundary.mjs  verify-identity-boundary.ts  verify-linux-package-artifacts.mjs  verify-linux-package-metadata.mjs  verify-offline-fonts.mjs  verify-repository-hygiene.mjs  verify-toolchain-policy.mjs
tests/: test_rpc_authenticated_flows.py
(+38 files in other folders)
