[package]
name = "zcvios-desktop"
version = "0.1.0"
description = "Local-first ZCVIOS desktop shell"
authors = ["MXZTAR"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zcvios_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-opener = "=2.5.4"
