[package]
name = "zcvios-desktop"
version = "0.1.0"
description = "Local-first ZCVIOS desktop shell"
authors = ["MXZTAR"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zcvios_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
rusqlite = { version = "=0.40.1", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-opener = "=2.5.4"
# cookie 0.18.1 currently requires the pre-0.3.52 parsing API.
time = "=0.3.51"
